--- a/well-secured/server/Pipfile
+++ b/well-secured/server/Pipfile
@@ -5,6 +5,11 @@ name = "pypi"
 
 [packages]
 flask = "*"
+flask-wtf = "*"
+sqlalchemy = "*"
+flask-sqlalchemy = "*"
+sqlalchemy-utils = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
